fix weird rendering when too much text

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -202,6 +202,7 @@ nav .profile-img {
 	padding: 1rem;
 	text-align: left;
 	background-color: #fff9ec;
+	overflow-wrap: anywhere;
 }
 
 .action-btn {
